--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
 <body>
+    <div class="title-box">
+        <h1>The Odin Project: Rock, Paper, Scissors</h1>        
+    </div>
+
     
 </body>
 </html>
