--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="title-box">
         <h1>The Odin Project: Rock, Paper, Scissors</h1>        
     </div>
+    <div class="body">
+        <button class="choice rock">Rock</button>
+        <button class="choice paper">Paper</button>
+        <button class="choice scissors">Scissors</button>
+    </div>
 
-    
 </body>
 </html>
