added scoreKeeper function, created div for result
added function that keeps track of score and announces winner after 5 rounds

added div to display round results and score status

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <button class="choice paper">Paper</button>
         <button class="choice scissors">Scissors</button>
     </div>
+    <div class="results-display">
+        results will display here
+    </div>
 
 </body>
 </html>
