added text display for winner, score, first-to-5
console.log still present in code but now winner is displayed in text on webpage

code is objectively sphagetti, but i can tidy it up :)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock, Paper, Scissors Game</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
@@ -16,9 +16,10 @@
         <button class="choice paper">Paper</button>
         <button class="choice scissors">Scissors</button>
     </div>
-    <div class="results-display">
-        results will display here
-    </div>
+    <div class="results-display-upper"></div>
+    <div class="results-display"></div>
+    <div class="winner-announce"></div>
 
 </body>
+
 </html>
