added capitalizeWinnerChoice(), cleaned up code
i should've left a running note of what i changed because i don't remember all of it! lessons for future commit messages...

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div class="title-box">
         <h1>The Odin Project: Rock, Paper, Scissors</h1>        
     </div>
-    <div class="body">
+    <div class="buttons">
         <button class="choice rock">Rock</button>
         <button class="choice paper">Paper</button>
         <button class="choice scissors">Scissors</button>
     </div>
-    <div class="results-display-upper"></div>
-    <div class="results-display"></div>
-    <div class="winner-announce"></div>
+    <div class="results-display-upper text-box"></div>
+    <div class="results-display text-box"></div>
+    <div class="winner-announce text-box"></div>
 
 </body>
 
